--- a/project.ipynb
+++ b/project.ipynb
@@ -1,41 +1,37 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "79977ae2-e39b-4221-81cf-b7c1c4cac914",
+   "cell_type": "markdown",
+   "id": "e6703d70-3cc2-4783-ab77-ae085fad95d0",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Picture"
+    "# Picture\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e16f05b0-337f-43fa-9916-4e0f61908be0",
+   "cell_type": "markdown",
+   "id": "31024cb0-2246-4c6d-9939-11e77fa52c82",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Intro"
+    "# Intro\n",
+    "***\n",
+    "The aim of this project is to simulate dataset that represents real life measurable phenomenon with simulated dataset having at least one hundred data point with at least four different variables. Sinthesised data should have close to real life properties and relationship amongst variables."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "2ce748c3-242b-428a-9ea1-1f7e12d28353",
+   "cell_type": "markdown",
+   "id": "f27f24d1-0929-44f1-82c7-ba5feb53784e",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Project description plan"
+    "# Project description plan\n",
+    "***\n",
+    "During recent wordwide lockdown it became increasingly popular to have a subscription to one of many movie/TV streaming services. These platforms experienced unprecedented growth month on month basis becoming daily habit for most. This project will look into simulating a dataset of fictional movie streaming platform 'MFLIX' usage log with dates, movie stream count per hour, movie category, user ID, user gender and name with surname. Different methods learned during this semester will be used in this project."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d2a72cdd-ad6a-4dce-bc0d-d7096d6a638f",
+   "cell_type": "markdown",
+   "id": "fe223782-cfbe-4ec6-943e-f3a3cde85940",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# Generating data"
    ]
@@ -49,12 +45,13 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c93e080e-5119-4054-a91e-dcba0ae2d6e4",
+   "cell_type": "markdown",
+   "id": "8e3da8a2-8a60-4ad3-a253-8fadb1c6a9b6",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Dates and times by hour\n",
+    "A date list with hourly timestamp"
+   ]
   },
   {
    "cell_type": "code",
@@ -65,13 +62,86 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "id": "5ea2be8b-0ee5-4c81-8d7b-9055da48464c",
+   "metadata": {},
+   "source": [
+    "# Streams\n",
+    "Depends on time of the day"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e80ff13b-37ba-4ee7-85f9-790ac7196805",
+   "id": "856cf6de-4d76-4f26-a2d8-bc8eaf6a856b",
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3c695362-e80a-4f2e-b15b-39ae640100b6",
+   "metadata": {},
    "source": [
-    "# Save as CSV"
+    "# Movie category\n",
+    "Randon selection from available list "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "21a19515-4a0c-4632-902a-22c069940285",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4065068f-f9b2-4d3d-88ef-4fab9cf73002",
+   "metadata": {},
+   "source": [
+    "# User gender"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a837f658-d615-4799-b333-30e0a3c4afba",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "761693eb-0462-4653-9f14-67cf57477a4e",
+   "metadata": {},
+   "source": [
+    "# User Name and Surname?\n",
+    "Depends on gender to be chosen from a list"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a0505e13-9581-4c25-8779-725b90516f4c",
+   "metadata": {},
+   "source": [
+    "https://www.irishcentral.com/roots/100-irish-language-first-names-meanings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "81aa1349-1fb0-4af1-bc35-ff648a37b4fe",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "59794f11-19b3-4901-9125-666de8299f99",
+   "metadata": {},
+   "source": [
+    "# Save as CSV/xlsx"
    ]
   },
   {
@@ -99,11 +169,9 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6963ad76-77a5-4c40-bcb4-3f0c8e6c0bc0",
+   "cell_type": "markdown",
+   "id": "bb0e87e8-686b-441e-a595-ef2bf702d4b3",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# Data overview and analysis"
    ]
@@ -117,11 +185,9 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0b364c75-0ab0-444a-8666-7d40a8aa67cd",
+   "cell_type": "markdown",
+   "id": "7e5e19c3-588c-459c-9782-622ab5c989cc",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# Plots"
    ]
@@ -135,19 +201,57 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "0efffca3-5e53-48f3-8cd2-b4a7ccfa9957",
+   "cell_type": "markdown",
+   "id": "8a1ca4c2-709e-42c3-80cf-ed5af0196b1f",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#References"
+    "# References"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e5366d2d-76f7-45a7-8b88-c3df4cc64cdb",
+   "metadata": {},
+   "source": [
+    "https://stackoverflow.com/questions/41598916/resize-the-image-in-jupyter-notebook-using-markdown"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "79a1b6be-659e-4cea-bbd1-6453b7552c86",
+   "metadata": {},
+   "source": [
+    "https://stackoverflow.com/questions/41598916/resize-the-image-in-jupyter-notebook-using-markdown"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e678474e-1af7-4d83-9ae1-d37a2ae21d4a",
+   "metadata": {},
+   "source": [
+    "https://stackoverflow.com/questions/56310849/generate-random-timeseries-data-with-dates"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "870f4587-3c9b-478d-a80e-e71ea0afd784",
+   "metadata": {},
+   "source": [
+    "https://pandas.pydata.org/pandas-docs/stable/user_guide/timeseries.html"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d194097c-b9c7-4fe2-a2f9-7df24c2461cb",
+   "metadata": {},
+   "source": [
+    "https://pandas.pydata.org/pandas-docs/stable/user_guide/timeseries.html"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fb1425d2-77af-46f3-af16-ada1fadd8018",
+   "id": "71936163-880b-4fdd-aa86-3791baa57481",
    "metadata": {},
    "outputs": [],
    "source": []
