Project picture added

--- a/project.ipynb
+++ b/project.ipynb
@@ -2,15 +2,17 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e6703d70-3cc2-4783-ab77-ae085fad95d0",
+   "id": "9caef092-e8a6-40f5-b6f5-36a3cada52f5",
    "metadata": {},
    "source": [
-    "# Picture\n"
+    "![film](https://github.com/Mantvydas-data/Programming-for-DA-2021-Proj/blob/main/data/denise-jans-tV80374iytg-unsplash.png)\n",
+    "\n",
+    "Photo by <a href=\"https://unsplash.com/@dmjdenise?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText\">Denise Jans</a> on <a href=\"https://unsplash.com/s/photos/film?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText\">Unsplash</a>\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "31024cb0-2246-4c6d-9939-11e77fa52c82",
+   "id": "0efd8881-fdbc-4751-942e-b0825930ea7b",
    "metadata": {},
    "source": [
     "# Intro\n",
