Day time slicing for views simulation

--- a/project.ipynb
+++ b/project.ipynb
@@ -5,7 +5,7 @@
    "id": "9caef092-e8a6-40f5-b6f5-36a3cada52f5",
    "metadata": {},
    "source": [
-    "![film](https://github.com/Mantvydas-data/Programming-for-DA-2021-Proj/blob/main/data/denise-jans-tV80374iytg-unsplash.png)\n",
+    "![film](https://raw.githubusercontent.com/Mantvydas-data/Programming-for-DA-2021-Proj/main/data/denise-jans-tV80374iytg-unsplash.PNG)\n",
     "\n",
     "Photo by <a href=\"https://unsplash.com/@dmjdenise?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText\">Denise Jans</a> on <a href=\"https://unsplash.com/s/photos/film?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText\">Unsplash</a>\n"
    ]
@@ -40,11 +40,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "a4e238ec-24ac-4d70-9e42-3a36a9fe66c1",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Importing required packages by their orthodox abbreviations\n",
+    "import matplotlib.pyplot as plt # Plotting\n",
+    "import numpy as np # Mathematical arrays\n",
+    "import pandas as pd # Work with data frames\n",
+    "\n",
+    "# Importing random generator and assigning it to rng variable\n",
+    "from numpy.random import default_rng\n",
+    "\n",
+    "rng = default_rng()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -57,11 +67,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "dca46334-9123-453e-a75f-9f11d20341a1",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DatetimeIndex(['2021-12-01 00:00:00', '2021-12-01 01:00:00',\n",
+       "               '2021-12-01 02:00:00', '2021-12-01 03:00:00',\n",
+       "               '2021-12-01 04:00:00', '2021-12-01 05:00:00',\n",
+       "               '2021-12-01 06:00:00', '2021-12-01 07:00:00',\n",
+       "               '2021-12-01 08:00:00', '2021-12-01 09:00:00',\n",
+       "               ...\n",
+       "               '2021-12-31 14:00:00', '2021-12-31 15:00:00',\n",
+       "               '2021-12-31 16:00:00', '2021-12-31 17:00:00',\n",
+       "               '2021-12-31 18:00:00', '2021-12-31 19:00:00',\n",
+       "               '2021-12-31 20:00:00', '2021-12-31 21:00:00',\n",
+       "               '2021-12-31 22:00:00', '2021-12-31 23:00:00'],\n",
+       "              dtype='datetime64[ns]', length=744, freq='H')"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Generating a range of dates by the hour\n",
+    "\n",
+    "# Count of hourly observations for month of December\n",
+    "periods = 31*24\n",
+    "\n",
+    "# Hourly date and time for December\n",
+    "dfdate = pd.date_range('2021-12-01', freq='H', periods=periods)\n",
+    "\n",
+    "dfdate\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -74,11 +116,115 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "856cf6de-4d76-4f26-a2d8-bc8eaf6a856b",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>H</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2021-12-01 01:00:00</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-12-01 02:00:00</th>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-12-01 03:00:00</th>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-12-01 04:00:00</th>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-12-01 05:00:00</th>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-12-31 02:00:00</th>\n",
+       "      <td>722</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-12-31 03:00:00</th>\n",
+       "      <td>723</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-12-31 04:00:00</th>\n",
+       "      <td>724</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-12-31 05:00:00</th>\n",
+       "      <td>725</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-12-31 06:00:00</th>\n",
+       "      <td>726</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>186 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                       H\n",
+       "2021-12-01 01:00:00    1\n",
+       "2021-12-01 02:00:00    2\n",
+       "2021-12-01 03:00:00    3\n",
+       "2021-12-01 04:00:00    4\n",
+       "2021-12-01 05:00:00    5\n",
+       "...                  ...\n",
+       "2021-12-31 02:00:00  722\n",
+       "2021-12-31 03:00:00  723\n",
+       "2021-12-31 04:00:00  724\n",
+       "2021-12-31 05:00:00  725\n",
+       "2021-12-31 06:00:00  726\n",
+       "\n",
+       "[186 rows x 1 columns]"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "daytime= pd.DataFrame({'H': np.arange(len(dfdate))}, index=dfdate)\n",
+    "#dfdate.between_time('12:00','15:00')\n",
+    "\n",
+    "\n",
+    "#dfdate.between_time('12:00','13:00')\n",
+    "#dfdate.indexer_between_time\n",
+    "daytime.between_time(\"01:00\",\"06:00\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -93,6 +239,30 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "21a19515-4a0c-4632-902a-22c069940285",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9bfb964f-2c6b-424a-aa9f-a576dc5cd263",
+   "metadata": {},
+   "source": [
+    "# User ID"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b876f6bb-0f16-4576-9d2d-5e726fea57ca",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b7d362be-fa1f-4201-bb79-df005772be6d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -182,6 +352,38 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "87bd68df-895e-4e3b-9cc1-d22043de8ff9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b13d715f-221c-4bda-8d9d-6c62b7b62db2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4d855ba5-ce53-4c6c-8d3a-dec7fb2acb97",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a237f79d-9506-41d6-8ba1-460bbd53727d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ece1cd46-3970-48a4-a348-a3eade8f1002",
    "metadata": {},
    "outputs": [],
    "source": []
