Project plan notes and descriptions

--- a/project.ipynb
+++ b/project.ipynb
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "id": "dca46334-9123-453e-a75f-9f11d20341a1",
    "metadata": {},
    "outputs": [
@@ -88,7 +88,7 @@
        "              dtype='datetime64[ns]', length=744, freq='H')"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -110,13 +110,14 @@
    "id": "5ea2be8b-0ee5-4c81-8d7b-9055da48464c",
    "metadata": {},
    "source": [
-    "# Streams\n",
-    "Depends on time of the day"
+    "# Streaming counts - Depends on time of the day. \n",
+    "***\n",
+    "To have realistic sream data views per hour needs to adhere to time of day to simulate peak-offpeak times of the day. Time serries data will be split by time of the day for random stream data count to be generated having not many streams during late night and early morning hours, medium usage during the day and peak time from 5 PM to 1AM. Streams will be 30% higher on Fridays, where on Saturday and Sunday they will increase to 40% compared to work day usage."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 4,
    "id": "856cf6de-4d76-4f26-a2d8-bc8eaf6a856b",
    "metadata": {},
    "outputs": [
@@ -146,72 +147,72 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2021-12-01 01:00:00</th>\n",
-       "      <td>1</td>\n",
+       "      <th>2021-12-01 12:00:00</th>\n",
+       "      <td>12</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2021-12-01 02:00:00</th>\n",
-       "      <td>2</td>\n",
+       "      <th>2021-12-01 13:00:00</th>\n",
+       "      <td>13</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2021-12-01 03:00:00</th>\n",
-       "      <td>3</td>\n",
+       "      <th>2021-12-01 14:00:00</th>\n",
+       "      <td>14</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2021-12-01 04:00:00</th>\n",
-       "      <td>4</td>\n",
+       "      <th>2021-12-02 12:00:00</th>\n",
+       "      <td>36</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2021-12-01 05:00:00</th>\n",
-       "      <td>5</td>\n",
+       "      <th>2021-12-02 13:00:00</th>\n",
+       "      <td>37</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2021-12-31 02:00:00</th>\n",
-       "      <td>722</td>\n",
+       "      <th>2021-12-30 13:00:00</th>\n",
+       "      <td>709</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2021-12-31 03:00:00</th>\n",
-       "      <td>723</td>\n",
+       "      <th>2021-12-30 14:00:00</th>\n",
+       "      <td>710</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2021-12-31 04:00:00</th>\n",
-       "      <td>724</td>\n",
+       "      <th>2021-12-31 12:00:00</th>\n",
+       "      <td>732</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2021-12-31 05:00:00</th>\n",
-       "      <td>725</td>\n",
+       "      <th>2021-12-31 13:00:00</th>\n",
+       "      <td>733</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2021-12-31 06:00:00</th>\n",
-       "      <td>726</td>\n",
+       "      <th>2021-12-31 14:00:00</th>\n",
+       "      <td>734</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>186 rows × 1 columns</p>\n",
+       "<p>93 rows × 1 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "                       H\n",
-       "2021-12-01 01:00:00    1\n",
-       "2021-12-01 02:00:00    2\n",
-       "2021-12-01 03:00:00    3\n",
-       "2021-12-01 04:00:00    4\n",
-       "2021-12-01 05:00:00    5\n",
+       "2021-12-01 12:00:00   12\n",
+       "2021-12-01 13:00:00   13\n",
+       "2021-12-01 14:00:00   14\n",
+       "2021-12-02 12:00:00   36\n",
+       "2021-12-02 13:00:00   37\n",
        "...                  ...\n",
-       "2021-12-31 02:00:00  722\n",
-       "2021-12-31 03:00:00  723\n",
-       "2021-12-31 04:00:00  724\n",
-       "2021-12-31 05:00:00  725\n",
-       "2021-12-31 06:00:00  726\n",
+       "2021-12-30 13:00:00  709\n",
+       "2021-12-30 14:00:00  710\n",
+       "2021-12-31 12:00:00  732\n",
+       "2021-12-31 13:00:00  733\n",
+       "2021-12-31 14:00:00  734\n",
        "\n",
-       "[186 rows x 1 columns]"
+       "[93 rows x 1 columns]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -223,7 +224,8 @@
     "\n",
     "#dfdate.between_time('12:00','13:00')\n",
     "#dfdate.indexer_between_time\n",
-    "daytime.between_time(\"01:00\",\"06:00\")"
+    "# Spliting time series by time of day\n",
+    "daytime.between_time(\"12:00\",\"14:00\")"
    ]
   },
   {
@@ -231,8 +233,9 @@
    "id": "3c695362-e80a-4f2e-b15b-39ae640100b6",
    "metadata": {},
    "source": [
-    "# Movie category\n",
-    "Randon selection from available list "
+    "# Movie/TV Series Category - Randon selection from available list\n",
+    "***\n",
+    "Movie - TV Series category will be randomly assigned to views data from list variable containing available categories on the platform. "
    ]
   },
   {
@@ -257,7 +260,9 @@
    "id": "b876f6bb-0f16-4576-9d2d-5e726fea57ca",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "User ID will be generated chosing two letters followed by three random numbers, 50 active users from Ireland will have User IDs assigned."
+   ]
   },
   {
    "cell_type": "code",
@@ -281,15 +286,19 @@
    "id": "a837f658-d615-4799-b333-30e0a3c4afba",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "Gender will be populated for User IDs that will determine name surname "
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "761693eb-0462-4653-9f14-67cf57477a4e",
    "metadata": {},
    "source": [
-    "# User Name and Surname?\n",
-    "Depends on gender to be chosen from a list"
+    "# User Name and Surname? - Depends on gender to be chosen from a list\n",
+    "***\n",
+    "User name will be selected from list of popular Irish names depending on gender variable assigned previously.\n",
+    "Names will be retrieved from [Irishcentral](https://www.irishcentral.com/roots/100-irish-language-first-names-meanings) website by using regular expressions to extract it, if not sucessful manual list in CSV/Excel format will be prepared to be read for random selection."
    ]
   },
   {
@@ -304,6 +313,40 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "81aa1349-1fb0-4af1-bc35-ff648a37b4fe",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a0356436-8568-460d-a531-93bff2ce0ee6",
+   "metadata": {},
+   "source": [
+    "# Joining all the data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7ead2d5a-58a9-4ac8-9301-f480679b1e0e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Data will be joined together indexing one of data variables "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "39efb701-746d-4e8f-99ac-7a78cc1c5549",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "561d389e-9483-4283-9f48-0b340413c66a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -333,19 +376,11 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7b210c3e-3930-417b-a214-87c6bddd355e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "bb0e87e8-686b-441e-a595-ef2bf702d4b3",
    "metadata": {},
    "source": [
-    "# Data overview and analysis"
+    "# Data overview and analysis/plots"
    ]
   },
   {
@@ -354,7 +389,9 @@
    "id": "87bd68df-895e-4e3b-9cc1-d22043de8ff9",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "Descriptive statistics"
+   ]
   },
   {
    "cell_type": "code",
@@ -362,7 +399,9 @@
    "id": "b13d715f-221c-4bda-8d9d-6c62b7b62db2",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "views by time of the week kde line plot or time series line plot"
+   ]
   },
   {
    "cell_type": "code",
@@ -370,7 +409,9 @@
    "id": "4d855ba5-ce53-4c6c-8d3a-dec7fb2acb97",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "pie plot for most streamed movie categories by gender "
+   ]
   },
   {
    "cell_type": "code",
@@ -378,7 +419,9 @@
    "id": "a237f79d-9506-41d6-8ba1-460bbd53727d",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "average week day views vs average weekend views?"
+   ]
   },
   {
    "cell_type": "code",
@@ -386,15 +429,15 @@
    "id": "ece1cd46-3970-48a4-a348-a3eade8f1002",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "bar plot for one weeks streams"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "7e5e19c3-588c-459c-9782-622ab5c989cc",
    "metadata": {},
-   "source": [
-    "# Plots"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
